Instant crash when opening some of the Eevee sample scenes #93058

Closed
opened 2021-11-13 14:51:19 +01:00 by YAFU · 14 comments

System Information
Operating system: Linux-5.11.0-38-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44

Blender Version
Broken: b18d0244fc is the first bad commit

Short description of error
blender.crash.txt

Exact steps for others to reproduce the error

  • Open some official Eevee sample scene like "Mr Elephant" or "Forest".
    Blender closes/crash

race_spaceship.zip

**System Information** Operating system: Linux-5.11.0-38-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44 **Blender Version** Broken: b18d0244fc is the first bad commit **Short description of error** [blender.crash.txt](https://archive.blender.org/developer/F11801037/blender.crash.txt) **Exact steps for others to reproduce the error** - Open some official Eevee sample scene like "Mr Elephant" or "Forest". Blender closes/crash [race_spaceship.zip](https://archive.blender.org/developer/F11801821/race_spaceship.zip)
Author

Added subscriber: @YAFU

Added subscriber: @YAFU
YAFU changed title from Blender 3.1 instant crash when opening Eevee sample scenes to Blender 3.0/3.1 instant crash when opening Eevee sample scenes 2021-11-13 15:15:13 +01:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Cannot confirm a crash here with 3.0 nor 3.1, Windows 10, AMD Radeon 5500 XT.

Cannot confirm a crash here with 3.0 nor 3.1, Windows 10, AMD Radeon 5500 XT.
Author

Ok, this is even weirder. I have downloaded some of the Eevee sample scenes again and it works correctly. The problem is with the same Eevee demo scenes but downloaded in 2017/08/28 (according to the information in my file browser, Eevee still beta ???). I have checked hashes of my old downloaded sample scenes with new downloaded ones, and hash differs. Have files been modified at some point? Anyway, I can open old scenes in Blender 2.93.5. Here I try to upload one of the scenes downloaded in 2017 that gives me problems:

race_spaceship.zip

btw i am having the same crash with some of my old files too (2017/2018) in blender 3.0/3.1

Ok, this is even weirder. I have downloaded some of the Eevee sample scenes again and it works correctly. The problem is with the same Eevee demo scenes but downloaded in 2017/08/28 (according to the information in my file browser, Eevee still beta ???). I have checked hashes of my old downloaded sample scenes with new downloaded ones, and hash differs. Have files been modified at some point? Anyway, I can open old scenes in Blender 2.93.5. Here I try to upload one of the scenes downloaded in 2017 that gives me problems: [race_spaceship.zip](https://archive.blender.org/developer/F11801821/race_spaceship.zip) btw i am having the same crash with some of my old files too (2017/2018) in blender 3.0/3.1

Added subscriber: @lictex_1

Added subscriber: @lictex_1
Author

So, with .blend file shared above (race_spaceship.zip) I get:

>>> bpy.data.version

(2, 80, 1)

And with the new sample scene:

>>> bpy.data.version

(2, 80, 74)

So apparently I had downloaded the very first sample scenes released back then, with which Blender 3.0/3.1 crashed.

So, with .blend file shared above (race_spaceship.zip) I get: ``` >>> bpy.data.version (2, 80, 1) ``` And with the new sample scene: ``` >>> bpy.data.version (2, 80, 74) ``` So apparently I had downloaded the very first sample scenes released back then, with which Blender 3.0/3.1 crashed.
Author

I have seen that Blender 3.0 has been released, and Blender still crash. Has anyone been able to reproduce the problem with the .blend file shared above (race_spaceship.zip)?

It just makes me curious as to whether the issue is intentionally dropped compatibility with Blender 2.80.1 or similar.

I have seen that Blender 3.0 has been released, and Blender still crash. Has anyone been able to reproduce the problem with the .blend file shared above (race_spaceship.zip)? It just makes me curious as to whether the issue is intentionally dropped compatibility with Blender 2.80.1 or similar.
Author

Added subscriber: @fclem

Added subscriber: @fclem
Author

Hello.
I'm not sure if this old report was lost in the sight of the bug tracker maintainers for some reason. Because this is a "crash" problem, I thought I was going to have some kind of feedback with maintainers to request more information about the problem.

@fclem Sorry to bother you. If you have time, could you look at the file that I shared and test if you can reproduce the crash? Perhaps it only happens with .blend files created when Blender 2.8/Eevee were in Alpha/Beta State.

Hello. I'm not sure if this old report was lost in the sight of the bug tracker maintainers for some reason. Because this is a "crash" problem, I thought I was going to have some kind of feedback with maintainers to request more information about the problem. @fclem Sorry to bother you. If you have time, could you look at the file that I shared and test if you can reproduce the crash? Perhaps it only happens with .blend files created when Blender 2.8/Eevee were in Alpha/Beta State.

Added subscribers: @mont29, @mano-wii

Added subscribers: @mont29, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the crash with the attached file.
When opening I see in the consoel, an error message:

ERROR (bke.lib_id): D:\Dev\BlenderDev\blender\source\blender\blenkernel\intern\lib_id.c:339 id_us_min: ID user decrement error: LSLineStyle (from '[Main]'): 0 <= 0

and some asserts:

BLI_assert failed: D:\Dev\BlenderDev\blender\source\blender\blenkernel\intern\lib_id.c:340, id_us_min(), at '0'
BLI_assert failed: D:\Dev\BlenderDev\blender\source\blender\blenkernel\intern\layer.c:1033, layer_collection_sync(), at 'layer_resync->is_used'

The crash happens in the versioning code:

>	blender.exe!layer_collection_sync(ViewLayer * view_layer, LayerCollectionResync * layer_resync, BLI_mempool * layer_resync_mempool, ListBase * r_lb_new_object_bases, const short parent_layer_flag, const short parent_collection_restrict, const short parent_layer_restrict, const unsigned short parent_local_collections_bits) Line 1035	C

 	blender.exe!BKE_layer_collection_sync(const Scene * scene, ViewLayer * view_layer) Line 1260	C
 	blender.exe!do_version_scene_collection_to_collection(Main * bmain, Scene * scene) Line 407	C
 	blender.exe!do_versions_after_linking_280(Main * bmain, ReportList * UNUSED_reports) Line 1417	C
 	blender.exe!do_versions_after_linking(Main * main, ReportList * reports) Line 3635	C
 	blender.exe!blo_read_file_internal(FileData * fd, const unsigned char * filepath) Line 3975	C
 	blender.exe!BLO_read_from_file(const unsigned char * filepath, eBLOReadSkip skip_flags, BlendFileReadReport * reports) Line 380	C
 	blender.exe!BKE_blendfile_read(const unsigned char * filepath, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 489	C
 	blender.exe!WM_file_read(bContext * C, const unsigned char * filepath, ReportList * reports) Line 935	C
 	blender.exe!wm_file_read_opwrap(bContext * C, const unsigned char * filepath, ReportList * reports) Line 2536	C
 	blender.exe!wm_open_mainfile__open(bContext * C, wmOperator * op) Line 2658	C
 	blender.exe!wm_open_mainfile_exec(bContext * C, wmOperator * op) Line 2693	C
 	blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2501	C
 	blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Line 2600	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3077	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3129	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3617	C
 	blender.exe!WM_main(bContext * C) Line 642	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 564	C
 	[External Code]	

b18d0244fc is the first bad commit
I'm not sure if that commit introduced the bug or just revealed a bug that already existed.

I can confirm the crash with the attached file. When opening I see in the consoel, an error message: ``` ERROR (bke.lib_id): D:\Dev\BlenderDev\blender\source\blender\blenkernel\intern\lib_id.c:339 id_us_min: ID user decrement error: LSLineStyle (from '[Main]'): 0 <= 0 ``` and some asserts: ``` BLI_assert failed: D:\Dev\BlenderDev\blender\source\blender\blenkernel\intern\lib_id.c:340, id_us_min(), at '0' BLI_assert failed: D:\Dev\BlenderDev\blender\source\blender\blenkernel\intern\layer.c:1033, layer_collection_sync(), at 'layer_resync->is_used' ``` The crash happens in the versioning code: ``` > blender.exe!layer_collection_sync(ViewLayer * view_layer, LayerCollectionResync * layer_resync, BLI_mempool * layer_resync_mempool, ListBase * r_lb_new_object_bases, const short parent_layer_flag, const short parent_collection_restrict, const short parent_layer_restrict, const unsigned short parent_local_collections_bits) Line 1035 C blender.exe!BKE_layer_collection_sync(const Scene * scene, ViewLayer * view_layer) Line 1260 C blender.exe!do_version_scene_collection_to_collection(Main * bmain, Scene * scene) Line 407 C blender.exe!do_versions_after_linking_280(Main * bmain, ReportList * UNUSED_reports) Line 1417 C blender.exe!do_versions_after_linking(Main * main, ReportList * reports) Line 3635 C blender.exe!blo_read_file_internal(FileData * fd, const unsigned char * filepath) Line 3975 C blender.exe!BLO_read_from_file(const unsigned char * filepath, eBLOReadSkip skip_flags, BlendFileReadReport * reports) Line 380 C blender.exe!BKE_blendfile_read(const unsigned char * filepath, const BlendFileReadParams * params, BlendFileReadReport * reports) Line 489 C blender.exe!WM_file_read(bContext * C, const unsigned char * filepath, ReportList * reports) Line 935 C blender.exe!wm_file_read_opwrap(bContext * C, const unsigned char * filepath, ReportList * reports) Line 2536 C blender.exe!wm_open_mainfile__open(bContext * C, wmOperator * op) Line 2658 C blender.exe!wm_open_mainfile_exec(bContext * C, wmOperator * op) Line 2693 C blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2501 C blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Line 2600 C blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3077 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3129 C blender.exe!wm_event_do_handlers(bContext * C) Line 3617 C blender.exe!WM_main(bContext * C) Line 642 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 564 C [External Code] ``` b18d0244fc is the first bad commit I'm not sure if that commit introduced the bug or just revealed a bug that already existed.
Germano Cavalcante changed title from Blender 3.0/3.1 instant crash when opening Eevee sample scenes to Instant crash when opening some of the Eevee sample scenes 2022-01-20 20:13:28 +01:00

This issue was referenced by 96667e3391

This issue was referenced by 96667e33913e37e257ae444009c5f7bea57b0d72

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-01-25 16:45:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93058
No description provided.